--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "expree": "^2.1.0",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
